--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div class="loading"><img src="http://img.mukewang.com/53edad8c000175cb00300029.jpg" alt="Loading..."></div>
         <div class="pic">
             <ul>
-                <li><img src="resources/volunteer2.jpeg"></li>
-                <li><img src="resources/volunteer.jpg"></li>
-                <li><img src="resources/give.jpg"></li>
+                <li><img src="volunteer2.jpeg"></li>
+                <li><img src="volunteer.jpg"></li>
+                <li><img src="give.jpg"></li>
             </ul>
         </div>
     </div>
@@ -89,13 +89,13 @@
             </div>
             <div class="activity_list">
                 <a href="#">
-                    <img src="resources/award1.jpg">
+                    <img src="award1.jpg">
                 </a>
                 <a href="#">
-                    <img src="resources/award2.jpeg">
+                    <img src="award2.jpeg">
                 </a>
                 <a href="#">
-                    <img src="resources/award3.jpg">
+                    <img src="award3.jpg">
                 </a>
             </div>
         </div>
