--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Charity Webapp</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <script src="http://demo.jb51.net/js/myfocus/content/templates/myfocus/js/myfocus-2.0.1.min.js"></script>
-    <script type="text/javascript">
+   <!--  <script src="http://demo.jb51.net/js/myfocus/content/templates/myfocus/js/myfocus-2.0.1.min.js"></script> -->
+  <!--   <script type="text/javascript">
         myFocus.set({
             id:'picBox'
         });
-    </script>
+    </script> -->
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="ad" id="picBox">
-        <div class="loading"><img src="http://img.mukewang.com/53edad8c000175cb00300029.jpg" alt="Loading..."></div>
+        <!-- <div class="loading"><img src="http://img.mukewang.com/53edad8c000175cb00300029.jpg" alt="Loading..."></div> -->
         <div class="pic">
             <ul>
                 <li><img src="volunteer2.jpeg"></li>
