--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <ul>
             <li>
                 <button>Donate</button>
-                <a href="#"></a>
+                <a href="donatuin_user_info.html"></a>
             </li>
             <li>
                <button>Volunteer</button>
-               </a>
+               <a href="volunteer_user_info_html"</a>
             </li>
         </ul>
     </div>
