--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul>
             <li>
                 <button>Donate</button>
-                <a href="donatuin_user_info.html"></a>
+                <a href="donation_user_info.html"></a>
             </li>
             <li>
                <button>Volunteer</button>
