--- a/index.html
+++ b/index.html
@@ -43,12 +43,16 @@
     <div class="participate">
         <ul>
             <li>
-                <button>Donate</button>
-                <a href="donation_user_info.html"></a>
+               <form method="get" action="donation_user_info.html">
+                    <button>Donate</button>
+                </form>
+                
             </li>
             <li>
-               <button>Volunteer</button>
-               <a href="volunteer_user_info_html"</a>
+                <form method="get" action="volunteer_user_info.html">
+                    <button>Volunteer</button>
+                </form>
+               </a>
             </li>
         </ul>
     </div>
