--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     <div class="participate">
         <ul>
             <li>
-               <form method="get" action="donation_user_info.html">
+               <form method="get" action="donation_program_list.html">
                     <button>Donate</button>
                 </form>
                 
             </li>
             <li>
-                <form method="get" action="volunteer_user_info.html">
+                <form method="get" action="volunteer_program_list.html">
                     <button>Volunteer</button>
                 </form>
                </a>
