--- a/donation_program_list.html
+++ b/donation_program_list.html
@@ -33,7 +33,7 @@
     </div>
      <div class="program">
         <div class="colorBar"><div class="title">Donation Program Title: Help Girls Learn</div></div>
-        <img src="children3.JPG" width="250" height="200" align="left">
+        <img src="children3.jpg" width="250" height="200" align="left">
         <div class="program_Description">Program Details: Feed My Starving Children is a program that supports education for girls in various regions. </div>
         <div class="donate"><a href="donation_user_info.html">Donate Now</a></div>
     </div>
