--- a/volunteer_program_list.html
+++ b/volunteer_program_list.html
@@ -22,7 +22,7 @@
     <div class="program">
         <div class="colorBar"><div class="title">Volunteer Program Title: Help Girls Learn</div></div>
         <img src="donate1.jpg" width="250" height="200" align="left">
-        <div class="program_Description"> Help Girls Learn is a program that supports education for girls in various regions. </div>
+        <div class="program_Description">Program Details: Help Girls Learn is a program that supports education for girls in various regions. </div>
         <div class="donate"><a href="volunteer_user_info.html">Volunteer Now</a></div>
     </div>
      <div class="program">
