--- a/donation_program_list.html
+++ b/donation_program_list.html
@@ -20,21 +20,21 @@
         </div>
     </div>
     <div class="program">
-        <div class="colorBar"><div class="title">Donation Program Title: Help Girls Learn</div></div>
+        <div class="colorBar"><div class="title">Donation Program: Donate with our Volunteers</div></div>
         <img src="children1.jpg" width="250" height="200" align="left">
-        <div class="program_Description"> Help Girls Learn is a program that supports education for girls in various regions. </div>
-        <div class="donate"><a href="donation_user_info.html">Donate Now</a></div>
+        <div class="program_Description"> Location: All volunteering locations<br> How do I donate: Contact us with any specific requirements you may have or just click "Donate Now" and we will send you more information! <br><br> Every month we send volunteers to support girl education and pack food for malnutritioned children. In addition to their help, we also take direct donation for those unable to travel far but are willing to help. Volunteer will buy children supplies or help girls pay tuition with your donation. The best part: you know where your money is spent!</div>
+        <div class="donate"><a href="donation_user_info.html" >Donate Now</a></div>
     </div>
      <div class="program">
-        <div class="colorBar"><div class="title">Donation Program Title: Feed My Starving Children</div></div>
+        <div class="colorBar"><div class="title">Donation Program: WildCat Fund</div></div>
         <img src="children2.jpg" width="250" height="200" align="left">
-        <div class="program_Description">Program Details: Feed My Starving Children is a program that supports education for girls in various regions. </div>
+        <div class="program_Description">Location: US and South America<br> How do I donate: Contact us with any specific requirements you may have or just click "Donate Now" and we will send you more information! <br><br> The founders of our organization are a group of Northwestern students. We would like to give support to those college students who are willing to dedicate their time and energy but struggles to go volunterring due to financial issues. We will tell you who your money goes to and how the student makes use of the donation thoroughly so there is no confusion.</div>
         <div class="donate"><a href="donation_user_info.html">Donate Now</a></div>
     </div>
      <div class="program">
-        <div class="colorBar"><div class="title">Donation Program Title: Help Girls Learn</div></div>
+        <div class="colorBar"><div class="title">Donation Program: Keep me Posted!</div></div>
         <img src="children3.jpg" width="250" height="200" align="left">
-        <div class="program_Description">Program Details: Feed My Starving Children is a program that supports education for girls in various regions. </div>
+        <div class="program_Description">Location: Everywhere! <br> How do I donate: Contact us with any specific requirements you may have or just click "Donate Now" and we will send you more information! <br><br> Keep me posted is a program that provides information about donation activities in the neighborhood. It is not limited to monetary donation-- it might be clothes, furnitures, anything. We post information about recent donations in the neighborhood so you can check them out very conveniently once the items you wish to donate matches an event.</div>
         <div class="donate"><a href="donation_user_info.html">Donate Now</a></div>
     </div>
 </div>
