--- a/volunteer_program_list.html
+++ b/volunteer_program_list.html
@@ -20,21 +20,21 @@
         </div>
     </div>
     <div class="program">
-        <div class="colorBar"><div class="title">Volunteer Program Title: Help Girls Learn</div></div>
+        <div class="colorBar"><div class="title">Volunteer Program: Help Girls Learn</div></div>
         <img src="donate1.jpg" width="250" height="200" align="left">
-        <div class="program_Description">Program Details: Help Girls Learn is a program that supports education for girls in various regions. </div>
+        <div class="program_Description"> Available Locations: Sudan, Uganda <br> Duration: Long term<br> Schedule: We organize trips once two months. Each trip lasts for from two weeks several months. <br> <br> Help Girls Learn is a program that supports education for girls in various regions. We invite volunteers to come and teach the girls. Because we do need volunteers to teach the girls, we would like to invite more volunteers who can stay longer. However if you are interested in shorter terms teaching you can join us for the two week trips.</div>
         <div class="donate"><a href="volunteer_user_info.html">Volunteer Now</a></div>
     </div>
      <div class="program">
-        <div class="colorBar"><div class="title">Volunteer Program Title: Feed My Starving Children</div></div>
+        <div class="colorBar"><div class="title">Volunteer Program: Feed My Starving Children</div></div>
         <img src="donate2.jpg" width="250" height="200" align="left">
-        <div class="program_Description">Program Details: Feed My Starving Children is a program that supports education for girls in various regions. </div>
+        <div class="program_Description">Available locations: US major cities and South Sudan <br> Duration: Short term <br> Schedule: In the US the schedule varies according to locations. Contact us if you are interested. For volunteering in South Sudan, we organize trips twice each year <br> <br>Program Details: Feed My Starving Children is a program that helps malnutritioned children. We help package food in the US on a regular basis and sends volunteers to South Sudan to get updated information on what the children need. </div>
         <div class="donate"><a href="volunteer_user_info.html">Volunteer Now</a></div>
     </div>
      <div class="program">
-        <div class="colorBar"><div class="title">Volunteer Program Title: Help Girls Learn</div></div>
+        <div class="colorBar"><div class="title">Volunteer Program: We Need Your Help</div></div>
         <img src="volunteer.JPG" width="250" height="200" align="left">
-        <div class="program_Description">Program Details: Feed My Starving Children is a program that supports education for girls in various regions. </div>
+        <div class="program_Description">Available Locations: Chad<br> Duration: Long term<br> Schdule: Irregular<br> <br>Program Details: We Need Your Help invites volunteers who are willing to commit for more than a year. Volunteers get to choose the location they want to volunteer at. You tell us where you want to go, and we will provide you with the list of programs and the necessary trainings.</div>
         <div class="donate"><a href="volunteer_user_info.html">Volunteer Now</a></div>
     </div>
 </div>
