--- a/thankyou_volunteer.html
+++ b/thankyou_volunteer.html
@@ -3,6 +3,7 @@
 <head>
     <title>Donation Personal Info</title>
     <link rel="stylesheet" type="text/css" href="inputinfo.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
 <body>
     <div class="wrap">
@@ -14,8 +15,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">How it works</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Your Account</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+                <li><a href="keepInTouch.html">Keep in Touch</a></li>
             </ul>
         </div>
     </div>
