--- a/thankyouintouch.html
+++ b/thankyouintouch.html
@@ -20,10 +20,10 @@
             </ul>
         </div>
     </div>
-    <div class="header_bar"><div class="title">Donation Complete</div></div>
+    <div class="header_bar"><div class="title">Signup Complete</div></div>
     <div class="program_overview">
         <div class="success_info">
-            Thank you for your generous donation!
+            Thank you for signing up!
         </div>
     </div>
     
