--- a/volunteer_program_list.html
+++ b/volunteer_program_list.html
@@ -19,6 +19,7 @@ button {
     border: none;
     cursor: pointer;
     font-size: 15px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 button:hover {
@@ -120,6 +121,7 @@ span.psw {
 <head>
     <title>Volunteer Program List</title>
     <link rel="stylesheet" type="text/css" href="inputinfo.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
 <body>
     <div class="wrap">
@@ -131,8 +133,8 @@ span.psw {
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">How it works</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Your Account</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+                <li><a href="keepInTouch.html">Keep in Touch</a></li>
             </ul>
         </div>
     </div>
@@ -143,7 +145,7 @@ span.psw {
         <div><button class="rightbtn" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Volunteer Now</button></div>
         <div id="id01" class="modal">
   
-  <form class="modal-content animate" action="volunteer_user_info.html">
+  <form class="modal-content animate" action="volunteer_user_info_login.html">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
     </div>
@@ -162,7 +164,7 @@ span.psw {
 
     <div class="container" style="background-color:#f1f1f1">
       </form>
-      <form method="get" action="volunteer_user_info.html">
+      <form method="get" action="volunteer_user_info_guest.html">
         <button type="submit">Continue as guest</button>
          <span class="psw">Forgot <a href="#">password?</a></span>
       </form>  
