--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
         <div class="nav_right">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">How it works</a></li>
+                <li><a href="index.html#instruction">How it works</a></li>
                 <li><a href="aboutus.html">About us</a></li>
                 <li><a href="keepInTouch.html">Keep in Touch</a></li>
             </ul>
@@ -39,14 +39,20 @@
                 <h2><a href="#" >About Us</a></h2>
             </div>
     <div class="main">
-        <div class="nav_right_2">
+        <!-- <div class="nav_right_2">
             <ul>
-                <li class="whoarewe"><a href="#">Who Are We?</a></li>
+                <li class="whoarewe"><a href="#aboutus">Who Are We?</a></li>
                 <li class="keepintouch"><a href="keepInTouch.html">Wanna keep in Touch?</a></li>
             </ul>
-        </div>
-        <div class="about_us">
+        </div> -->
+        <div class="about_us" id="aboutus">
         <a>   We are group of Northwestern students passionate about Human Computer Interactions and volunteering. <br>We designed this website as part of our course project for EECS class.<br> This website aims to facilitate the process of donating to people in need and letting people know about volunteering opportunities.<br> You can sign up for volunteering, donating and contact us if you have any questions.<br> We tried to design the website so that it is convenient, intuitive and user-friendly. Let us know if you have any suggestions ;)</a>
+        </div>
+        <div class="nav_right_2">
+            <ul>
+                <!-- <li class="whoarewe"><a href="#aboutus">Who Are We?</a></li> -->
+                <li class="keepintouch"><a href="keepInTouch.html">Wanna keep in Touch?</a></li>
+            </ul>
         </div>
 <!-- 
     </div> -->
