--- a/keepInTouch.html
+++ b/keepInTouch.html
@@ -32,7 +32,7 @@ button:hover {
         <div class="nav_right">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">How it works</a></li>
+                <li><a href="index.html#instruction">How it works</a></li>
                 <li><a href="aboutus.html">About us</a></li>
                 <li><a href="keepInTouch.html">Keep in Touch</a></li>
             </ul>
